syntax = "proto3";

package io.xpring;

import "account_info.proto";
import "fee.proto";
import "get_account_info_request.proto";
import "get_fee_request.proto";
import "get_latest_validated_ledger_sequence_request.proto";
import "get_transaction_status_request.proto";
import "ledger_sequence.proto";
import "submit_signed_transaction_request.proto";
import "submit_signed_transaction_response.proto";
import "transaction_status.proto";

option java_package = "io.xpring.proto";
option java_outer_classname = "XrpLedgerProto";
option java_multiple_files = true;

// RPCs available to interact with the XRP Ledger.
service XRPLedgerAPI {
  // Get account info for an account on the XRP Ledger.
  rpc GetAccountInfo (GetAccountInfoRequest) returns (AccountInfo);

  // Get the fee for a transaction on the XRP Ledger.
  rpc GetFee (GetFeeRequest) returns (Fee);

  // Submit a signed transaction to the XRP Ledger.
  rpc SubmitSignedTransaction (SubmitSignedTransactionRequest) returns (SubmitSignedTransactionResponse);

  // Get the status of a transaction on the XRP Ledger.
  rpc GetTransactionStatus (GetTransactionStatusRequest) returns (TransactionStatus);

  // Get the latest validated ledger sequence.
  rpc GetLatestValidatedLedgerSequence (GetLatestValidatedLedgerSequenceRequest) returns (LedgerSequence);
}
